--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -7,13 +7,14 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "Heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build"
+    "Heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build"
   },
   "author": "Clifford Twum",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "mongoose": "^6.2.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
