--- a/part4/part4-notes/.gitignore
+++ b/part4/part4-notes/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.env
+
 # dependencies
 /node_modules
 /.pnp
@@ -9,7 +11,7 @@
 /coverage
 
 # production
-/build
+#/build
 
 # misc
 .DS_Store
@@ -21,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env
