--- a/part4/part4-notes/package.json
+++ b/part4/part4-notes/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../client/ && npm run build && cp -r build ../server",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
     "logs:prod": "heroku logs --tail",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest --verbose"
   },
   "author": "Clifford Twum",
   "license": "MIT",
@@ -23,6 +23,10 @@
   },
   "devDependencies": {
     "eslint": "^8.9.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
+  },
+  "jest":{
+    "testEnvironment": "node"
   }
 }
